Fix grid column overflow for features on very small screens

--- a/derive.at/styles/generic.scss
+++ b/derive.at/styles/generic.scss
@@ -61,7 +61,7 @@
 .generic__big_heading {
   font-family: 'FunctionPro-Medium';
   font-size: 2.65em;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 
   a {
     text-decoration: none;
@@ -77,7 +77,7 @@
 .generic__heading {
   font-family: 'FunctionPro-Medium';
   font-size: 1.65em;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 
   a {
     text-decoration: none;
@@ -97,7 +97,7 @@
 .generic__subheading {
   font-family: 'FunctionPro-Medium';
   font-size: 1.33em;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 
   a {
     text-decoration: none;
