--- a/urbanize.at/styles/features.scss
+++ b/urbanize.at/styles/features.scss
@@ -1,6 +1,7 @@
 .features {
   display: grid;
   grid-gap: 1.33em 1.33em;
+  grid-template-columns: minmax(0, 1fr);
 
   @media (min-width: 680px) {
     grid-template-columns: repeat(2, 1fr);
