--- a/urbanize.at/styles/generic.scss
+++ b/urbanize.at/styles/generic.scss
@@ -2,7 +2,7 @@
   color: $primary_color;
   font-family: 'FunctionPro-Medium';
   font-size: 1.65em;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 
   a {
     text-decoration: none;
